JIRA ID [APSTRATA-1294] FIXED : (1) Word wrapping of long text in the survey action list, title, description, and fields. (2) Moved the success message upwards underneath the "Show results to users" checkbox

--- a/apstrataDojoSDK/demos/survey/widgets/css/survey.css
+++ b/apstrataDojoSDK/demos/survey/widgets/css/survey.css
@@ -33,19 +33,25 @@
 .survey h2 {
     font-size: 2em;
     color: #666699;
+	word-wrap: break-word;
     /*color: green;*/
 }
 
 .survey h3 {
     font-size: 1.3em;
+	word-wrap: break-word;
     /*color: #222222;*/
 }
 
 
 
-.surveryField {
+.surveyField {
     width: 250px;
     padding: 10px;
+}
+
+.surveyField span {
+	word-wrap: break-word;
 }
 
 .surveyButton {
